# gnome-subtitles

./: .gitignore  .project  AUTHORS  CREDITS  ChangeLog  MAINTAINERS  Makefile.am  NEWS  README  README.md  RELEASING  TODO  autogen.sh  build.properties  configure.ac  configure.in  gnome-subtitles.csproj  gnome-subtitles.doap  gnome-subtitles.mdp  gnome-subtitles.mds  gnome-subtitles.sln  meson.build  meson_options.txt  nant.build
build-aux/: cairo-sharp.dll.config  gnome-subtitles.exe.config  gnome-subtitles.in  meson.build  meson_post_install.py
data/: Makefile.am  gnome-subtitles.1  gnome-subtitles.appdata.xml  gnome-subtitles.appdata.xml.in  gnome-subtitles.desktop  gnome-subtitles.desktop.in  gnome-subtitles.schemas  meson.build  org.gnome.GnomeSubtitles.appdata.xml.in  org.gnome.GnomeSubtitles.desktop.in  org.gnome.GnomeSubtitles.desktop.in.in  org.gnome.GnomeSubtitles.gschema.xml
gnome-subtitles/: AUTHORS  CREDITS  ChangeLog  Makefile.am  NEWS  README  TODO  autogen.sh  build.properties  configure.in  gnome-subtitles.mdp  gnome-subtitles.mds  nant.build
gnome-subtitles/data/: Makefile.am  gnome-subtitles.1  gnome-subtitles.desktop.in  gnome-subtitles.schemas
gnome-subtitles/etc/: gnome-subtitles  script.in
gnome-subtitles/help/: Makefile.am
gnome-subtitles/help/C/: gnome-subtitles.xml
gnome-subtitles/po/: POTFILES.in  POTFILES.skip
gnome-subtitles/src/: Makefile.am
gnome-subtitles/src/Glade/: AboutDialog.glade  EncodingsDialog.glade  FileOpenDialog.glade  FilePropertiesDialog.glade  FileSaveAsDialog.glade  HeadersDialog.glade  MainWindow.glade  PreferencesDialog.glade  ReportBugWindow.glade  SearchDialog.glade  TimingsAdjustDialog.glade  TimingsShiftDialog.glade  gnome-subtitles.glade
gstreamer-playbin-0.2.1/: Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.in
gstreamer-playbin-0.2.1/src/: AssemblyInfo.cs  Engine.cs  Makefile.am  Makefile.in  gstreamerplaybinwrapper.pc.in  main.c
src/: Makefile.am  meson.build
src/Glade/: AboutDialog.glade  EncodingsDialog.glade  ErrorDialog.glade  FileOpenDialog.glade  FileOpenErrorDialog.glade  FilePropertiesDialog.glade  FileSaveAsDialog.glade  HeadersDialog.glade  MainWindow.glade  MainWindow.ui  PreferencesDialog.glade  ReportBugWindow.glade  SearchDialog.glade  SetLanguageDialog.glade  ShowMessageDialog.glade  TimingsAdjustDialog.glade  TimingsShiftDialog.glade  TimingsSynchronizeDialog.glade  VideoOpenDialog.glade  VideoOpenDialog.ui  VideoSeekToDialog.glade  gnome-subtitles.glade  gnome-subtitles.gladep
src/Glade/old.glade/: AboutDialog.glade  AboutDialog.ui  EncodingsDialog.ui  FileOpenDialog.glade  FileOpenDialog.ui  FilePropertiesDialog.glade  FilePropertiesDialog.ui  FileSaveAsDialog.glade  FileSaveAsDialog.ui  HeadersDialog.ui  PreferencesDialog.glade  PreferencesDialog.ui  SearchDialog.glade  SearchDialog.ui  SetLanguageDialog.ui  TimingsAdjustDialog.ui  TimingsShiftDialog.ui  TimingsSynchronizeDialog.ui  VideoSeekToDialog.glade  VideoSeekToDialog.ui
src/GnomeSubtitles/Application/: ApplicationCore.cs  CommandManager.cs  Commands.cs  EventHandlers.cs  GUI.cs  GladeWidget.cs  Menus.cs  SubtitleView.cs  WidgetNames.cs
src/GnomeSubtitles/Command/: AdjustTimingsCommand.cs  ChangeFrameRateCommand.cs  ChangeTimingCommand.cs  Command.cs  CommandTarget.cs  DeleteTextCommand.cs  FixedSingleSelectionCommand.cs  InsertSubtitleCommand.cs  InsertTextContentCommand.cs  MultipleSelectionCommand.cs  ReplaceAllCommand.cs  ShiftTimingsCommand.cs  SingleSelectionCommand.cs  VideoSetSubtitleTimingCommand.cs
src/GnomeSubtitles/Commands/: AdjustTimingsCommand.cs  ChangeFrameRateCommand.cs  ChangeStyleCommand.cs  ChangeTextCommand.cs  ChangeTimingCommand.cs  Command.cs  CommandActivatedArgs.cs  CommandActivatedHandler.cs  CommandManager.cs  CommandTarget.cs  DeleteSubtitlesCommand.cs  DeleteTextCommand.cs  DeleteTextContentCommand.cs  DeleteTranslationCommand.cs  FixedMultipleSelectionCommand.cs  InsertSubtitleCommand.cs  InsertTextCommand.cs  InsertTextContentCommand.cs  InsertTranslationCommand.cs  MultipleSelectionCommand.cs  ShiftTimingsCommand.cs  SingleSelectionCommand.cs  VideoSetSubtitleTimingCommand.cs
src/GnomeSubtitles/Core/: Backup.cs  Base.cs  CellRendererCenteredText.cs  Clipboards.cs  Config.cs  ConfigBackendGSettings.cs  ConfigBackendInMemory.cs  ConfigBackendUnavailableException.cs  Dialogs.cs  Document.cs  DragDrop.cs  EncodingDescription.cs  Encodings.cs  EventHandlers.cs  FileTools.cs  GUI.cs  Global.cs  GlobalAccelerators.cs  IConfigBackend.cs  Menus.cs  Player.cs  PlayerPositionWatcher.cs  Search.cs  SelectionType.cs  SpellLanguage.cs  SpellLanguages.cs  Status.cs  SubtitleEdit.cs  SubtitleView.cs  Subtitles.cs  SyncPoints.cs  Util.cs  Video.cs  VideoPosition.cs  VideoSubtitle.cs  WidgetNames.cs
src/GnomeSubtitles/Dialog/: AboutDialog.cs  BaseDialog.cs  BasicErrorDialog.cs  BuilderDialog.cs  DialogScope.cs  DialogStrings.cs  Dialogs.cs  EncodingsDialog.cs  ErrorDialog.cs  FileHeadersDialog.cs  FileOpenDialog.cs  FileOpenErrorDialog.cs  FilePropertiesDialog.cs  FileSaveAsDialog.cs  FileSaveDialog.cs  FileSaveErrorDialog.cs  FileTranslationOpenDialog.cs  FileTranslationSaveDialog.cs  GladeDialog.cs  HeadersDialog.cs  MessageDialog.cs  PreferencesDialog.cs  ReportBugWindow.cs  SaveConfirmationDialog.cs  SearchDialog.cs  SetLanguageDialog.cs  SetLanguagesDialog.cs  SetTextLanguageDialog.cs  SetTranslationLanguageDialog.cs  SubtitleFileChooserDialog.cs  SubtitleFileOpenErrorDialog.cs  SubtitleFileSaveAsDialog.cs  SyncPoints.cs  TimingsAdjustDialog.cs  TimingsShiftDialog.cs  TimingsSynchronizeDialog.cs  TranslationSaveAsDialog.cs  Util.cs  VideoErrorDialog.cs  VideoFileOpenErrorDialog.cs  (+3 more)
src/GnomeSubtitles/Dialogs/: AboutDialog.cs  BugReportWindow.cs  Dialogs.cs  EncodingsDialog.cs  ErrorDialog.cs  FileEncoding.cs  FileOpenDialog.cs  FileOpenErrorDialog.cs  FilePropertiesDialog.cs  FileSaveAsDialog.cs  FileSaveErrorDialog.cs  FileTranslationOpenDialog.cs  GladeDialog.cs  HeadersDialog.cs  PreferencesDialog.cs  ReportBugWindow.cs  SaveAsDialog.cs  (+10 more)
src/SubLib/: ChangeLog
(+379 files in other folders)
