#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.


AC_INIT(README)
AM_INIT_AUTOMAKE(gstreamer-playbin, 0.2.1)
AM_MAINTAINER_MODE

# Checks for programs.
AC_PROG_CC
AM_PROG_LIBTOOL




AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
if test "x$PKG_CONFIG" = "xno"; then
	AC_MSG_ERROR([You need to install pkg-config])
fi



AC_PATH_PROG(CSC, csc, no)
AC_PATH_PROG(MCS, gmcs, no)


CS="C#"
if test "x$CSC" = "xno" -a "x$MCS" = "xno"  ; then
	dnl AC_MSG_ERROR([You need to install a C# compiler])
	AC_MSG_ERROR([No $CS compiler found])
fi

if test "x$MCS" = "xno" ; then
	MCS=$CSC
fi



PKG_CHECK_MODULES(gstreamer, [gstreamer-0.10 >= 0.10])

AC_SUBST(gstreamer_CFLAGS)
AC_SUBST(gstreamer_LIBS)



AC_OUTPUT([
./Makefile
./src/Makefile
./src/gstreamerplaybinwrapper.pc
])
