subdir('GnomeSubtitles/Execution')

sources = [
	'./External/Enchant/Enchant.cs',
	'./External/GStreamer/GstBackend.cs',
	'./External/GStreamer/GstMediaInfo.cs',
	'./External/GtkSpell/SpellChecker.cs',
	'./External/Interop/Interop.cs',
	'./External/NCharDet/Big5Statistics.cs',
	'./External/NCharDet/EUCJPStatistics.cs',
	'./External/NCharDet/EUCKRStatistics.cs',
	'./External/NCharDet/EUCTWStatistics.cs',
	'./External/NCharDet/GB2312Statistics.cs',
	'./External/NCharDet/nsBIG5Verifier.cs',
	'./External/NCharDet/nsCP1252Verifier.cs',
	'./External/NCharDet/nsDetector.cs',
	'./External/NCharDet/nsEUCJPVerifier.cs',
	'./External/NCharDet/nsEUCKRVerifier.cs',
	'./External/NCharDet/nsEUCSampler.cs',
	'./External/NCharDet/nsEUCStatistics.cs',
	'./External/NCharDet/nsEUCTWVerifier.cs',
	'./External/NCharDet/nsGB18030Verifier.cs',
	'./External/NCharDet/nsGB2312Verifier.cs',
	'./External/NCharDet/nsHZVerifier.cs',
	'./External/NCharDet/nsICharsetDetectionObserver.cs',
	'./External/NCharDet/nsICharsetDetector.cs',
	'./External/NCharDet/nsISO2022CNVerifier.cs',
	'./External/NCharDet/nsISO2022JPVerifier.cs',
	'./External/NCharDet/nsISO2022KRVerifier.cs',
	'./External/NCharDet/nsPSMDetector.cs',
	'./External/NCharDet/nsSJISVerifier.cs',
	'./External/NCharDet/nsUCS2BEVerifier.cs',
	'./External/NCharDet/nsUCS2LEVerifier.cs',
	'./External/NCharDet/nsUTF8Verifier.cs',
	'./External/NCharDet/nsVerifier.cs',
	'./GnomeSubtitles/Core/Backup.cs',
	'./GnomeSubtitles/Core/Base.cs',
	'./GnomeSubtitles/Core/Clipboards.cs',
	'./GnomeSubtitles/Core/Command/AdjustTimingsCommand.cs',
	'./GnomeSubtitles/Core/Command/BaseCommand.cs',
	'./GnomeSubtitles/Core/Command/ChangeFrameRateCommand.cs',
	'./GnomeSubtitles/Core/Command/ChangeStyleCommand.cs',
	'./GnomeSubtitles/Core/Command/ChangeTimingCommand.cs',
	'./GnomeSubtitles/Core/Command/CommandActivatedArgs.cs',
	'./GnomeSubtitles/Core/Command/CommandActivatedHandler.cs',
	'./GnomeSubtitles/Core/Command/CommandManager.cs',
	'./GnomeSubtitles/Core/Command/CommandTarget.cs',
	'./GnomeSubtitles/Core/Command/DeleteSubtitlesCommand.cs',
	'./GnomeSubtitles/Core/Command/DeleteTextCommand.cs',
	'./GnomeSubtitles/Core/Command/DeleteTextContentCommand.cs',
	'./GnomeSubtitles/Core/Command/DeleteTranslationCommand.cs',
	'./GnomeSubtitles/Core/Command/FixedMultipleSelectionCommand.cs',
	'./GnomeSubtitles/Core/Command/FixedSingleSelectionCommand.cs',
	'./GnomeSubtitles/Core/Command/InsertSubtitleCommand.cs',
	'./GnomeSubtitles/Core/Command/InsertTextCommand.cs',
	'./GnomeSubtitles/Core/Command/InsertTextContentCommand.cs',
	'./GnomeSubtitles/Core/Command/InsertTranslationCommand.cs',
	'./GnomeSubtitles/Core/Command/MergeSubtitlesCommand.cs',
	'./GnomeSubtitles/Core/Command/MultipleSelectionCommand.cs',
	'./GnomeSubtitles/Core/Command/ReplaceAllCommand.cs',
	'./GnomeSubtitles/Core/Command/ShiftTimingsCommand.cs',
	'./GnomeSubtitles/Core/Command/SingleSelectionCommand.cs',
	'./GnomeSubtitles/Core/Command/SplitSubtitlesCommand.cs',
	'./GnomeSubtitles/Core/Command/SynchronizeTimingsCommand.cs',
	'./GnomeSubtitles/Core/Command/TranslatorCommand.cs',
	'./GnomeSubtitles/Core/Command/VideoSetSubtitleTimingCommand.cs',
	'./GnomeSubtitles/Core/ConfigBackendGSettings.cs',
	'./GnomeSubtitles/Core/ConfigBackendInMemory.cs',
	'./GnomeSubtitles/Core/ConfigBackendUnavailableException.cs',
	'./GnomeSubtitles/Core/Config.cs',
	'./GnomeSubtitles/Core/Document.cs',
	'./GnomeSubtitles/Core/DragDrop.cs',
	'./GnomeSubtitles/Core/EncodingDescription.cs',
	'./GnomeSubtitles/Core/Encodings.cs',
	'./GnomeSubtitles/Core/EventHandlers.cs',
	'./GnomeSubtitles/Core/GlobalAccelerators.cs',
	'./GnomeSubtitles/Core/IConfigBackend.cs',
	'./GnomeSubtitles/Core/Search.cs',
	'./GnomeSubtitles/Core/SpellLanguage.cs',
	'./GnomeSubtitles/Core/SpellLanguages.cs',
	'./GnomeSubtitles/Core/SyncPoints.cs',
	'./GnomeSubtitles/Core/Util.cs',
	'./GnomeSubtitles/Dialog/AboutDialog.cs',
	'./GnomeSubtitles/Dialog/BaseDialog.cs',
	'./GnomeSubtitles/Dialog/BuilderDialog.cs',
	'./GnomeSubtitles/Dialog/DialogScope.cs',
	'./GnomeSubtitles/Dialog/Dialogs.cs',
	'./GnomeSubtitles/Dialog/DialogStrings.cs',
	'./GnomeSubtitles/Dialog/EncodingsDialog.cs',
	'./GnomeSubtitles/Dialog/FileHeadersDialog.cs',
	'./GnomeSubtitles/Dialog/FileOpenDialog.cs',
	'./GnomeSubtitles/Dialog/FilePropertiesDialog.cs',
	'./GnomeSubtitles/Dialog/FileSaveDialog.cs',
	'./GnomeSubtitles/Dialog/FileTranslationOpenDialog.cs',
	'./GnomeSubtitles/Dialog/FileTranslationSaveDialog.cs',
	'./GnomeSubtitles/Dialog/Message/BasicErrorDialog.cs',
	'./GnomeSubtitles/Dialog/Message/DialogUtil.cs',
	'./GnomeSubtitles/Dialog/Message/ErrorDialog.cs',
	'./GnomeSubtitles/Dialog/Message/FileSaveErrorDialog.cs',
	'./GnomeSubtitles/Dialog/Message/MessageDialog.cs',
	'./GnomeSubtitles/Dialog/Message/SaveConfirmationDialog.cs',
	'./GnomeSubtitles/Dialog/Message/SubtitleFileOpenErrorDialog.cs',
	'./GnomeSubtitles/Dialog/Message/VideoFileOpenErrorDialog.cs',
	'./GnomeSubtitles/Dialog/Message/WarningDialog.cs',
	'./GnomeSubtitles/Dialog/PreferencesDialog.cs',
	'./GnomeSubtitles/Dialog/SearchDialog.cs',
	'./GnomeSubtitles/Dialog/SetLanguagesDialog.cs',
	'./GnomeSubtitles/Dialog/TimingsAdjustDialog.cs',
	'./GnomeSubtitles/Dialog/TimingsShiftDialog.cs',
	'./GnomeSubtitles/Dialog/TimingsSynchronizeDialog.cs',
	'./GnomeSubtitles/Dialog/VideoOpenDialog.cs',
	'./GnomeSubtitles/Dialog/VideoSeekToDialog.cs',
	'./GnomeSubtitles/Execution/BugReporter.cs',
	'./GnomeSubtitles/Execution/Executable.cs',
	'./GnomeSubtitles/Execution/ExecutionContext.cs',
	'./GnomeSubtitles/Ui/Component/ComboBoxUtil.cs',
	'./GnomeSubtitles/Ui/Component/EncodingComboBox.cs',
	'./GnomeSubtitles/Ui/Component/NewlineTypeComboBox.cs',
	'./GnomeSubtitles/Ui/Component/SubtitleFormatComboBox.cs',
	'./GnomeSubtitles/Ui/Edit/SubtitleEdit.cs',
	'./GnomeSubtitles/Ui/Edit/SubtitleEditSpinButtons.cs',
	'./GnomeSubtitles/Ui/Edit/SubtitleEditText.cs',
	'./GnomeSubtitles/Ui/Edit/SubtitleEditTextView.cs',
	'./GnomeSubtitles/Ui/Edit/SubtitleEditTextViewMargin.cs',
	'./GnomeSubtitles/Ui/Edit/SubtitleEditTranslation.cs',
	'./GnomeSubtitles/Ui/MainUi.cs',
	'./GnomeSubtitles/Ui/Menus.cs',
	'./GnomeSubtitles/Ui/Status.cs',
	'./GnomeSubtitles/Ui/VideoPreview/Exceptions/PlayerException.cs',
	'./GnomeSubtitles/Ui/VideoPreview/MediaBackend.cs',
	'./GnomeSubtitles/Ui/VideoPreview/Player.cs',
	'./GnomeSubtitles/Ui/VideoPreview/PlayerPositionWatcher.cs',
	'./GnomeSubtitles/Ui/VideoPreview/SubtitleOverlay.cs',
	'./GnomeSubtitles/Ui/VideoPreview/SubtitleTracker.cs',
	'./GnomeSubtitles/Ui/VideoPreview/Video.cs',
	'./GnomeSubtitles/Ui/VideoPreview/VideoFiles.cs',
	'./GnomeSubtitles/Ui/VideoPreview/VideoPosition.cs',
	'./GnomeSubtitles/Ui/View/CellRendererCenteredText.cs',
	'./GnomeSubtitles/Ui/View/SelectionIntended.cs',
	'./GnomeSubtitles/Ui/View/SelectionType.cs',
	'./GnomeSubtitles/Ui/View/Subtitles.cs',
	'./GnomeSubtitles/Ui/View/SubtitleSelection.cs',
	'./GnomeSubtitles/Ui/View/SubtitleView.cs',
	'./GnomeSubtitles/Ui/WidgetNames.cs',
	'./GnomeSubtitles/Ui/WidgetStyles.cs',
	'./GnomeSubtitles/Ui/WindowState.cs',
	'./SubLib/Core/Domain/Enumerations.cs',
	'./SubLib/Core/Domain/FileProperties.cs',
	'./SubLib/Core/Domain/Frames.cs',
	'./SubLib/Core/Domain/Headers.cs',
	'./SubLib/Core/Domain/IncompleteSubtitleCollection.cs',
	'./SubLib/Core/Domain/IncompleteSubtitle.cs',
	'./SubLib/Core/Domain/Style.cs',
	'./SubLib/Core/Domain/SubtitleCollection.cs',
	'./SubLib/Core/Domain/SubtitleConstants.cs',
	'./SubLib/Core/Domain/Subtitle.cs',
	'./SubLib/Core/Domain/SubtitleProperties.cs',
	'./SubLib/Core/Domain/Subtitles.cs',
	'./SubLib/Core/Domain/SubtitleText.cs',
	'./SubLib/Core/Domain/SubtitleTypeInfo.cs',
	'./SubLib/Core/Domain/SyncPoint.cs',
	'./SubLib/Core/Domain/SyncPoints.cs',
	'./SubLib/Core/Domain/Times.cs',
	'./SubLib/Core/Domain/Timing.cs',
	'./SubLib/Core/MatchEvaluationCounter.cs',
	'./SubLib/Core/Search/SearchOperator.cs',
	'./SubLib/Core/Search/SubtitleReplaceResult.cs',
	'./SubLib/Core/Search/SubtitleSearchOptions.cs',
	'./SubLib/Core/Search/SubtitleSearchResults.cs',
	'./SubLib/Core/SubtitleFactory.cs',
	'./SubLib/Core/SubtitleSaver.cs',
	'./SubLib/Core/Timing/AdjustOperator.cs',
	'./SubLib/Core/Timing/FrameRateOperator.cs',
	'./SubLib/Core/Timing/MergeOperator.cs',
	'./SubLib/Core/Timing/ShiftOperator.cs',
	'./SubLib/Core/Timing/SplitOperator.cs',
	'./SubLib/Core/Timing/SynchronizeOperator.cs',
	'./SubLib/Core/Timing/SyncUtil.cs',
	'./SubLib/Core/Timing/TimingUtil.cs',
	'./SubLib/Core/Translations.cs',
	'./SubLib/Core/Translator.cs',
	'./SubLib/Exceptions/EncodingNotSupportedException.cs',
	'./SubLib/Exceptions/FileTooLargeException.cs',
	'./SubLib/Exceptions/TranslatorException.cs',
	'./SubLib/Exceptions/UnknownEncodingException.cs',
	'./SubLib/Exceptions/UnknownSubtitleFormatException.cs',
	'./SubLib/IO/FileInputOutput.cs',
	'./SubLib/IO/Input/ParsingProperties.cs',
	'./SubLib/IO/Input/PlainTextParser.cs',
	'./SubLib/IO/Input/SubtitleInput.cs',
	'./SubLib/IO/Input/SubtitleParser.cs',
	'./SubLib/IO/Output/SubtitleOutput.cs',
	'./SubLib/IO/SubtitleFormats/BuiltInSubtitleFormats.cs',
	'./SubLib/IO/SubtitleFormats/SubtitleFormatAdobeEncoreDVD.cs',
	'./SubLib/IO/SubtitleFormats/SubtitleFormatAdvancedSubStationAlpha.cs',
	'./SubLib/IO/SubtitleFormats/SubtitleFormatAQTitle.cs',
	'./SubLib/IO/SubtitleFormats/SubtitleFormat.cs',
	'./SubLib/IO/SubtitleFormats/SubtitleFormatDKSSubtitleFormat.cs',
	'./SubLib/IO/SubtitleFormats/SubtitleFormatFABSubtitler.cs',
	'./SubLib/IO/SubtitleFormats/SubtitleFormatKaraokeLyricsLRC.cs',
	'./SubLib/IO/SubtitleFormats/SubtitleFormatKaraokeLyricsVKT.cs',
	'./SubLib/IO/SubtitleFormats/SubtitleFormatMacSUB.cs',
	'./SubLib/IO/SubtitleFormats/SubtitleFormatMicroDVD.cs',
	'./SubLib/IO/SubtitleFormats/SubtitleFormatMPlayer2.cs',
	'./SubLib/IO/SubtitleFormats/SubtitleFormatMPlayer.cs',
	'./SubLib/IO/SubtitleFormats/SubtitleFormatMPSub.cs',
	'./SubLib/IO/SubtitleFormats/SubtitleFormatPanimator.cs',
	'./SubLib/IO/SubtitleFormats/SubtitleFormatPhoenixJapanimationSociety.cs',
	'./SubLib/IO/SubtitleFormats/SubtitleFormatPowerDivX.cs',
	'./SubLib/IO/SubtitleFormats/SubtitleFormatSofni.cs',
	'./SubLib/IO/SubtitleFormats/SubtitleFormatSubCreator1x.cs',
	'./SubLib/IO/SubtitleFormats/SubtitleFormatSubRip.cs',
	'./SubLib/IO/SubtitleFormats/SubtitleFormatSubStationAlpha.cs',
	'./SubLib/IO/SubtitleFormats/SubtitleFormatSubViewer1.cs',
	'./SubLib/IO/SubtitleFormats/SubtitleFormatSubViewer2.cs',
	'./SubLib/IO/SubtitleFormats/SubtitleFormatViPlaySubtitleFile.cs',
	'./SubLib/Util/Logger.cs',
	sources_assembly_info
]

system_deps = [
	'-r:Mono.Posix'
]

resources = [
	'-resource:' + meson.source_root() / 'data/gnome-subtitles-logo.png',
	'-resource:' + meson.current_source_dir() / 'Glade/MainWindow.ui'
]

executable('gnome-subtitles',
	sources: sources,
	dependencies: [gst_sharp_dep, gtk_sharp_dep],
	cs_args: system_deps + resources,
	install: true,
	install_dir: get_option('libdir') / 'gnome-subtitles'
)

